src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Back_In_Which_Sem__c</fullName>
        <label>Back In Which Sem?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>5th</fullName>
                </value>
                <value>
                    <fullName>6th</fullName>
                </value>
                <value>
                    <fullName>7th</fullName>
                </value>
                <value>
                    <fullName>8th</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Back_In_Which_Subject__c</fullName>
        <label>Back In Which Subject?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C and Data Structure</fullName>
                </value>
                <value>
                    <fullName>Network Theory</fullName>
                </value>
                <value>
                    <fullName>Computer Programming</fullName>
                </value>
                <value>
                    <fullName>Data processing and File Organization</fullName>
                </value>
                <value>
                    <fullName>Linear and Digital ICS Application</fullName>
                </value>
                <value>
                    <fullName>Switching Theory and Logical Design</fullName>
                </value>
                <value>
                    <fullName>Data Communications</fullName>
                </value>
                <value>
                    <fullName>Interfacing Through Microprocessors</fullName>
                </value>
                <value>
                    <fullName>Theory of Computation</fullName>
                </value>
                <value>
                    <fullName>Principles of Programming Languages</fullName>
                </value>
                <value>
                    <fullName>System Programming</fullName>
                </value>
                <value>
                    <fullName>Operation Research</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone_Number__c</fullName>
        <label>Bank Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Semester__c</fullName>
        <label>Current Semester</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <label>Donation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exam_Fees_Submitted__c</fullName>
        <label>Exam Fees Submitted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Famale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Famale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Father_Mobile_Number__c</fullName>
        <label>Father Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_Submitted__c</fullName>
        <label>Fees Submitted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <label>HomePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Donation__c</fullName>
        <label>Is Donation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Account__c</fullName>
        <label>LinkedIn Account</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Male__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Male</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Overall_Grade_Percentage__c</fullName>
        <label>Overall Grade/Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pending_Exam_Fees__c</fullName>
        <label>Pending Exam Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Fees_Amount__c</fullName>
        <label>Pending Fees Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Overall_Amount__c</fullName>
        <label>Pending Overall Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Mobile_Number__c</fullName>
        <label>Personal Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_Stream__c</fullName>
        <label>Section/Stream</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Computer Science &amp; Eng.</fullName>
                </value>
                <value>
                    <fullName>Electrical Engineering</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Mechanical Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Working_Office__c</fullName>
        <label>Working Office</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Year_Of_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Year Of Class</label>
        <referenceTo>Year_Of_Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Registrar_Record</fullName>
        <active>true</active>
        <label>Registrar Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher_Record</fullName>
        <active>true</active>
        <label>Teacher Record</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>